tests/invalid/require_tailrec_2.err_exp2
require_tailrec_2.m:039: In mode number 1 of predicate `map1'/3:
require_tailrec_2.m:039:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:046: In mode number 1 of predicate `map2'/3:
require_tailrec_2.m:046:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:054: In mode number 1 of function `even1'/1:
require_tailrec_2.m:054:   warning: mutually recursive call to function
require_tailrec_2.m:054:   `odd1'/1 is not tail recursive.
require_tailrec_2.m:063: In mode number 1 of function `odd1'/1:
require_tailrec_2.m:063:   warning: mutually recursive call to function
require_tailrec_2.m:063:   `even1'/1 is tail recursive, but tail recursion
require_tailrec_2.m:063:   optimization cannot be applied to it, because the
require_tailrec_2.m:063:   *callee* cannot reach the caller via tail calls
require_tailrec_2.m:063:   only.
require_tailrec_2.m:063:   The MLDS backend can optimize only *mutual* tail
require_tailrec_2.m:063:   recursion; it cannot optimize tail recursion if it
require_tailrec_2.m:063:   goes only one way between two procedures.
require_tailrec_2.m:074: In mode number 1 of predicate `qsortapp_1'/2:
require_tailrec_2.m:074:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:083: In mode number 1 of predicate `qsortapp_2'/2:
require_tailrec_2.m:083:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:092: In mode number 1 of predicate `qsortapp_3'/2:
require_tailrec_2.m:092:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:101: In mode number 1 of predicate `qsortapp_4'/2:
require_tailrec_2.m:101:   error: self-recursive call is not tail recursive.
require_tailrec_2.m:110: In mode number 1 of predicate `qsortapp_5'/2:
require_tailrec_2.m:110:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:119: In mode number 1 of predicate `qsortapp_6'/2:
require_tailrec_2.m:119:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:126: In `:- pragma require_tail_recursion' for function
require_tailrec_2.m:126:   `cons'/2:
require_tailrec_2.m:126:   warning: the code defining this function contains no
require_tailrec_2.m:126:   recursive calls at all, tail-recursive or otherwise.
