tests/invalid/require_tailrec_2.err_exp
require_tailrec_2.m:039: In mode number 1 of predicate `map1'/3:
require_tailrec_2.m:039:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:046: In mode number 1 of predicate `map2'/3:
require_tailrec_2.m:046:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:054: In mode number 1 of function `even1'/1:
require_tailrec_2.m:054:   warning: mutually recursive call to function
require_tailrec_2.m:054:   `odd1'/1 is not tail recursive.
require_tailrec_2.m:074: In mode number 1 of predicate `qsortapp_1'/2:
require_tailrec_2.m:074:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:083: In mode number 1 of predicate `qsortapp_2'/2:
require_tailrec_2.m:083:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:092: In mode number 1 of predicate `qsortapp_3'/2:
require_tailrec_2.m:092:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:101: In mode number 1 of predicate `qsortapp_4'/2:
require_tailrec_2.m:101:   error: self-recursive call is not tail recursive.
require_tailrec_2.m:110: In mode number 1 of predicate `qsortapp_5'/2:
require_tailrec_2.m:110:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:119: In mode number 1 of predicate `qsortapp_6'/2:
require_tailrec_2.m:119:   warning: self-recursive call is not tail recursive.
require_tailrec_2.m:126: In `:- pragma require_tail_recursion' for function
require_tailrec_2.m:126:   `cons'/2:
require_tailrec_2.m:126:   warning: the code defining this function contains no
require_tailrec_2.m:126:   recursive calls at all, tail-recursive or otherwise.
